src/datafusion-client/src/tests/snapshots/liquid_cache_datafusion_client__tests__tpch_q8.snap
---
source: src/datafusion-client/src/tests/mod.rs
expression: displayable.tree_render().to_string()
---
┌───────────────────────────┐
│  SortPreservingMergeExec  │
│    --------------------   │
│   o_year ASC NULLS LAST   │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│          SortExec         │
│    --------------------   │
│  o_year@0 ASC NULLS LAST  │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       ProjectionExec      │
│    --------------------   │
│         mkt_share:        │
│ sum(CASE WHEN all_nations │
│  .nation = Utf8("BRAZIL") │
│   THEN all_nations.volume │
│    ELSE Int64(0) END) /   │
│       sum(all_nations     │
│          .volume)         │
│                           │
│       o_year: o_year      │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│           aggr:           │
│ sum(CASE WHEN all_nations │
│   .nation = BRAZIL THEN   │
│     all_nations.volume    │
│    ELSE Some(0),38,4 END  │
│     ) as sum(CASE WHEN    │
│         all_nations       │
│      .nation = Utf8(      │
│       "BRAZIL") THEN      │
│         all_nations       │
│     .volume ELSE Int64    │
│       (0) END), sum       │
│        (all_nations       │
│          .volume)         │
│                           │
│      group_by: o_year     │
│                           │
│           mode:           │
│      FinalPartitioned     │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      RepartitionExec      │
│    --------------------   │
│ partition_count(in->out): │
│           8 -> 8          │
│                           │
│    partitioning_scheme:   │
│    Hash([o_year@0], 8)    │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│           aggr:           │
│ sum(CASE WHEN all_nations │
│   .nation = BRAZIL THEN   │
│     all_nations.volume    │
│    ELSE Some(0),38,4 END  │
│     ) as sum(CASE WHEN    │
│         all_nations       │
│      .nation = Utf8(      │
│       "BRAZIL") THEN      │
│         all_nations       │
│     .volume ELSE Int64    │
│       (0) END), sum       │
│        (all_nations       │
│          .volume)         │
│                           │
│      group_by: o_year     │
│       mode: Partial       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       ProjectionExec      │
│    --------------------   │
│       nation: n_name      │
│                           │
│          o_year:          │
│      date_part(YEAR,      │
│        o_orderdate)       │
│                           │
│          volume:          │
│ l_extendedprice * (Some(1)│
│    ,20,0 - l_discount)    │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│        HashJoinExec       │
│    --------------------   │
│            on:            ├──────────────┐
│(r_regionkey = n_regionkey)│              │
└─────────────┬─────────────┘              │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│   LiquidCacheClientExec   ││        HashJoinExec       │
│    --------------------   ││    --------------------   │
│          server:          ││            on:            ├──────────────┐
│  http://localhost:50051,  ││(n_nationkey = s_nationkey)│              │
│      object_stores=[]     ││                           │              │
└─────────────┬─────────────┘└─────────────┬─────────────┘              │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│       DataSourceExec      ││   LiquidCacheClientExec   ││        HashJoinExec       │
│    --------------------   ││    --------------------   ││    --------------------   │
│          files: 1         ││          server:          ││            on:            │
│      format: parquet      ││  http://localhost:50051,  ││(n_nationkey = c_nationkey)├──────────────┐
│                           ││      object_stores=[]     ││                           │              │
│         predicate:        ││                           ││                           │              │
│      r_name = AMERICA     ││                           ││                           │              │
└───────────────────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘              │
                             ┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                             │       DataSourceExec      ││   LiquidCacheClientExec   ││        HashJoinExec       │
                             │    --------------------   ││    --------------------   ││    --------------------   │
                             │          files: 1         ││          server:          ││            on:            ├──────────────┐
                             │      format: parquet      ││  http://localhost:50051,  ││  (c_custkey = o_custkey)  │              │
                             │                           ││      object_stores=[]     ││                           │              │
                             └───────────────────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘              │
                                                          ┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                          │       DataSourceExec      ││   LiquidCacheClientExec   ││        HashJoinExec       │
                                                          │    --------------------   ││    --------------------   ││    --------------------   │
                                                          │          files: 1         ││          server:          ││            on:            ├──────────────┐
                                                          │      format: parquet      ││  http://localhost:50051,  ││ (o_orderkey = l_orderkey) │              │
                                                          │                           ││      object_stores=[]     ││                           │              │
                                                          └───────────────────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘              │
                                                                                       ┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                                                       │       DataSourceExec      ││   LiquidCacheClientExec   ││        HashJoinExec       │
                                                                                       │    --------------------   ││    --------------------   ││    --------------------   │
                                                                                       │          files: 1         ││          server:          ││            on:            ├──────────────┐
                                                                                       │      format: parquet      ││  http://localhost:50051,  ││  (s_suppkey = l_suppkey)  │              │
                                                                                       │                           ││      object_stores=[]     ││                           │              │
                                                                                       └───────────────────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘              │
                                                                                                                    ┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                                                                                    │       DataSourceExec      ││   LiquidCacheClientExec   ││      RepartitionExec      │
                                                                                                                    │    --------------------   ││    --------------------   ││    --------------------   │
                                                                                                                    │          files: 1         ││          server:          ││ partition_count(in->out): │
                                                                                                                    │      format: parquet      ││  http://localhost:50051,  ││           1 -> 8          │
                                                                                                                    │                           ││      object_stores=[]     ││                           │
                                                                                                                    │         predicate:        ││                           ││    partitioning_scheme:   │
                                                                                                                    │ o_orderdate >= 1995-01-01 ││                           ││     RoundRobinBatch(8)    │
                                                                                                                    │   AND o_orderdate <= 1996 ││                           ││                           │
                                                                                                                    │           -12-31          ││                           ││                           │
                                                                                                                    └───────────────────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘
                                                                                                                                                 ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                                                                                                                 │       DataSourceExec      ││        HashJoinExec       │
                                                                                                                                                 │    --------------------   ││    --------------------   │
                                                                                                                                                 │          files: 1         ││            on:            ├──────────────┐
                                                                                                                                                 │      format: parquet      ││  (p_partkey = l_partkey)  │              │
                                                                                                                                                 └───────────────────────────┘└─────────────┬─────────────┘              │
                                                                                                                                                                              ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                                                                                                                                              │   LiquidCacheClientExec   ││   LiquidCacheClientExec   │
                                                                                                                                                                              │    --------------------   ││    --------------------   │
                                                                                                                                                                              │          server:          ││          server:          │
                                                                                                                                                                              │  http://localhost:50051,  ││  http://localhost:50051,  │
                                                                                                                                                                              │      object_stores=[]     ││      object_stores=[]     │
                                                                                                                                                                              └─────────────┬─────────────┘└─────────────┬─────────────┘
                                                                                                                                                                              ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                                                                                                                                              │       DataSourceExec      ││       DataSourceExec      │
                                                                                                                                                                              │    --------------------   ││    --------------------   │
                                                                                                                                                                              │          files: 1         ││          files: 1         │
                                                                                                                                                                              │      format: parquet      ││      format: parquet      │
                                                                                                                                                                              │                           ││                           │
                                                                                                                                                                              │         predicate:        ││                           │
                                                                                                                                                                              │ p_type = ECONOMY ANODIZED ││                           │
                                                                                                                                                                              │            STEEL          ││                           │
                                                                                                                                                                              └───────────────────────────┘└───────────────────────────┘
