src/datafusion-client/src/tests/snapshots/liquid_cache_datafusion_client__tests__tpch_q9.snap
---
source: src/datafusion-client/src/tests/mod.rs
expression: displayable.tree_render().to_string()
---
┌───────────────────────────┐
│  SortPreservingMergeExec  │
│    --------------------   │
│   nation ASC NULLS LAST,  │
│         o_year DESC       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│          SortExec         │
│    --------------------   │
│  nation@0 ASC NULLS LAST, │
│        o_year@1 DESC      │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       ProjectionExec      │
│    --------------------   │
│       nation: nation      │
│       o_year: o_year      │
│                           │
│        sum_profit:        │
│     sum(profit.amount)    │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│           aggr:           │
│     sum(profit.amount)    │
│                           │
│         group_by:         │
│       nation, o_year      │
│                           │
│           mode:           │
│      FinalPartitioned     │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      RepartitionExec      │
│    --------------------   │
│ partition_count(in->out): │
│           8 -> 8          │
│                           │
│    partitioning_scheme:   │
│ Hash([nation@0, o_year@1],│
│             8)            │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│           aggr:           │
│     sum(profit.amount)    │
│                           │
│         group_by:         │
│       nation, o_year      │
│                           │
│       mode: Partial       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       ProjectionExec      │
│    --------------------   │
│          amount:          │
│ l_extendedprice * (Some(1)│
│   ,20,0 - l_discount) -   │
│       ps_supplycost *     │
│         l_quantity        │
│                           │
│       nation: n_name      │
│                           │
│          o_year:          │
│      date_part(YEAR,      │
│        o_orderdate)       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│        HashJoinExec       │
│    --------------------   │
│            on:            ├──────────────┐
│(n_nationkey = s_nationkey)│              │
└─────────────┬─────────────┘              │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│   LiquidCacheClientExec   ││        HashJoinExec       │
│    --------------------   ││    --------------------   │
│          server:          ││            on:            ├──────────────┐
│  http://localhost:50051,  ││ (o_orderkey = l_orderkey) │              │
│      object_stores=[]     ││                           │              │
└─────────────┬─────────────┘└─────────────┬─────────────┘              │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│       DataSourceExec      ││   LiquidCacheClientExec   ││        HashJoinExec       │
│    --------------------   ││    --------------------   ││    --------------------   │
│          files: 1         ││          server:          ││            on:            ├──────────────┐
│      format: parquet      ││  http://localhost:50051,  ││ (ps_suppkey = l_suppkey), │              │
│                           ││      object_stores=[]     ││  (ps_partkey = l_partkey) │              │
└───────────────────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘              │
                             ┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                             │       DataSourceExec      ││   LiquidCacheClientExec   ││        HashJoinExec       │
                             │    --------------------   ││    --------------------   ││    --------------------   │
                             │          files: 1         ││          server:          ││            on:            ├──────────────┐
                             │      format: parquet      ││  http://localhost:50051,  ││  (s_suppkey = l_suppkey)  │              │
                             │                           ││      object_stores=[]     ││                           │              │
                             └───────────────────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘              │
                                                          ┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                          │       DataSourceExec      ││   LiquidCacheClientExec   ││      RepartitionExec      │
                                                          │    --------------------   ││    --------------------   ││    --------------------   │
                                                          │          files: 1         ││          server:          ││ partition_count(in->out): │
                                                          │      format: parquet      ││  http://localhost:50051,  ││           1 -> 8          │
                                                          │                           ││      object_stores=[]     ││                           │
                                                          │                           ││                           ││    partitioning_scheme:   │
                                                          │                           ││                           ││     RoundRobinBatch(8)    │
                                                          └───────────────────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘
                                                                                       ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                                                       │       DataSourceExec      ││        HashJoinExec       │
                                                                                       │    --------------------   ││    --------------------   │
                                                                                       │          files: 1         ││            on:            │
                                                                                       │      format: parquet      ││  (p_partkey = l_partkey)  ├──────────────┐
                                                                                       │                           ││                           │              │
                                                                                       │         predicate:        ││                           │              │
                                                                                       │  DynamicFilter [ empty ]  ││                           │              │
                                                                                       └───────────────────────────┘└─────────────┬─────────────┘              │
                                                                                                                    ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                                                                                    │   LiquidCacheClientExec   ││   LiquidCacheClientExec   │
                                                                                                                    │    --------------------   ││    --------------------   │
                                                                                                                    │          server:          ││          server:          │
                                                                                                                    │  http://localhost:50051,  ││  http://localhost:50051,  │
                                                                                                                    │      object_stores=[]     ││      object_stores=[]     │
                                                                                                                    └─────────────┬─────────────┘└─────────────┬─────────────┘
                                                                                                                    ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                                                                                    │       DataSourceExec      ││       DataSourceExec      │
                                                                                                                    │    --------------------   ││    --------------------   │
                                                                                                                    │          files: 1         ││          files: 1         │
                                                                                                                    │      format: parquet      ││      format: parquet      │
                                                                                                                    │                           ││                           │
                                                                                                                    │         predicate:        ││         predicate:        │
                                                                                                                    │    p_name LIKE %green%    ││  DynamicFilter [ empty ]  │
                                                                                                                    │                           ││     AND DynamicFilter [   │
                                                                                                                    │                           ││         empty ] AND       │
                                                                                                                    │                           ││        DynamicFilter      │
                                                                                                                    │                           ││        [ empty ] AND      │
                                                                                                                    │                           ││        DynamicFilter      │
                                                                                                                    │                           ││          [ empty ]        │
                                                                                                                    └───────────────────────────┘└───────────────────────────┘
